chore: housekeeping - dependencies & gradle update; no compile warnings (#56)